--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
                 <div class="w3-white w3-text-grey w3-card-4">
                     <div class="w3-display-container">
-                        <img src="images/jama.png" style="width:100%" alt="Avatar">
+                        <img src="images/kama.png" style="width:100%" alt="Avatar">
                         <div class="w3-display-bottomleft w3-container w3-text-black">
                             
                         </div>
                     </div>
                     <div class="w3-container">
-                        <h2>YULDASHEV JAMSHID</h2>
+                        <h2>FAYZULLAYEV KAMRONBEK</h2>
                         <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>MR.FARKHOD O'QUV MARKAZI O'QUVCHISI</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>DOSTOBOD SHAXAR</p>
-                        <p><i class="fa fa-telegram fa-fw w3-margin-right w3-large w3-text-teal"></i>@anonimous_oo2</p>
-                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+998 88 082 90 77</p>
+                        <p><i class="fa fa-telegram fa-fw w3-margin-right w3-large w3-text-teal"></i>@kunfuyucin</p>
+                        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+998 94 248 21 08</p>
                         <hr>
 
                         <p class="w3-large"><b><i
@@ -103,7 +103,7 @@
                     </div>
                     <div class="w3-container">
                         <h5 class="w3-opacity"><b>MR.FARKHOD O'QUV MARKAZI</b>
-                        ADMINI</h5>
+                        </h5>
                         <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2024 - 2025</h6>
                         <p>WEB DASTURLASH</p>
                         <hr>
